mule-management-console/v/3.2/working-with-mule-server-instances.adoc
= 使用Mule服务器实例

使用服务器选项卡查看和管理包含管理控制台代理的所有Mule ESB实例（服务器）。

还可以使用Servers选项卡来查看和管理群集中的Mule ESB实例（节点）。

本页介绍如何使用服务器。

有关如何使用群集中的节点的信息，请参阅 link:/mule-management-console/v/3.2/managing-mule-high-availability-ha-clusters[管理Mule高可用性（HA）群集]。

当您单击“服务器”选项卡时，会看到所有服务器的摘要列表：

image:all-servers-summary.png[所有的服务器，汇总]

所有服务器的汇总列表中也列出了群集。

image:all-servers-and-clusters.png[所有的服务器和集群]

左侧的导航窗格显示组织成组的所有服务器。您可以点击*All*查看所有服务器，也可以点击特定的组来查看该组中的服务器。在这种情况下，_group_仅仅是服务器的逻辑分组，例如按功能（例如：开发或生产）。

点击列表中的群集以获取有关该群集的详细信息。

image:get_cluster_details.png[get_cluster_details]

image:cluster_details_pane.png[cluster_details_pane]

默认情况下提供您在第一次运行控制台时在导航窗格中看到的组。单击重命名按钮重命名组，或单击新建组添加您自己的组。单击删除从树中删除组。

服务器摘要窗格列出控制台已知的所有服务器。服务器左侧的绿色圆圈表示服务器正在运行，而红色圆圈通常表示服务器已停止。由于除了停止的服务器之外，可能会出现红圈，因此您可能需要删除服务器信任库文件`truststore.jks`才能更正此情况。您可以在 link:/mule-management-console/v/3.2/troubleshooting-tips[疑难解答提示]部分找到有关删除信任存储库文件的说明。

另外，窗格显示服务器流的状态（显示为"x/y/z"，其中x是正在运行的流的数量，y是暂停流的数量，z是已停止流的数量）等等。请注意，停止的流量并不意味着出现故障，因为有些流量只在需要时才启动。

要在服务器实例上执行操作，请单击服务器名称旁边的复选框，然后单击要执行的操作（如添加到组）。单击服务器名称查看有关服务器的详细信息。有关监视单个服务器的详细信息，请参阅 link:/mule-management-console/v/3.2/monitoring-a-server[监视服务器]。

*[mmc:Mule 3.2]*有关监视群集中节点的信息，请参阅 link:/mule-management-console/v/3.2/monitoring-a-cluster[监视群集]。

== 注册服务器

您必须注册一台服务器以使用控制台进行管理。如果您使用的是捆绑发行版（即包含Mule ESB服务器和管理控制台的发行版），则服务器会自动注册到控制台。如果您确实需要注册服务器，最简单的方法是使用控制台的自动发现功能，控制台会自动感知Mule服务器正在运行，并且可以轻松注册任何"discovered"服务器。 （请参阅下面的“新服务器的服务器自动发现”一节。）

要手动注册服务器，请点击*New Server*按钮。

image:add-server.png[添加服务器]

然后输入服务器的名称和服务器代理的URL，例如http：// localhost：7777 / mmc-support，使用正确的主机和端口替换localhost和7777，如Mule启动屏幕所示：

[source, code, linenums]
----
* Agents Running:                                                    *
*   Mule Management Console Support (0.0.0.0:7777)                   *
*   JMX Agent                                                        *
*   Wrapper Manager: Mule PID #1792, Wrapper PID #5216               *
**********************************************************************
----

最初使用普通http端口作为代理绑定端口来注册服务器。在注册过程中，会进行安全配对，并且端口将变为https。

默认情况下，新添加（或注册的服务器）显示在导航树中的*All*组内。服务器也可以添加到特定的组，并且可以将同一台服务器添加到多个组。这在“使用服务器组”一节中进行了说明。

*[mmc:Mule 3.2]*还可以将服务器作为节点添加到群集，并且可以将同一台服务器添加到多个群组和群集。这在“使用服务器组”一节中进行了说明。

新服务器的== 服务器自动发现

请注意，导航窗格包含未注册的组节点。如果有Mule ESB服务器与管理控制台代理联机，那么这些服务器将显示在未注册节点下方，直到它们注册为止。要注册其中一台服务器，请单击未注册的组或节点，然后从列表中选择服务器并单击其中一个注册按钮（请参见下图）。您不需要知道服务器的URL;控制台使用自动发现来发现服务器并获取URL。

image:auto-discover.png[自动发现]

单击注册按钮以简单地注册选定的服务器。或者，单击注册并添加到组按钮，然后从下拉列表中选择要添加所选服务器的组。所选服务器同时注册并添加到所选组中。下图说明注册所选服务器并将其添加到暂存组的结果。 （mmc：使用服务器组部分解释组。）

image:add-server2.png[附加服务器2]

== 停止或重新启动服务器

您可以通过选中其复选框来停止或重新启动服务器，然后单击*Control Server*并从下拉列表中选择一个选项。您还可以在 link:/mule-management-console/v/3.2/monitoring-a-server[查看其细节]时停止或重新启动服务器。一旦服务器从管理控制台停止，它必须直接重新启动。也就是说，管理控制台无法启动未运行的服务器。

image:server-stop.png[服务器停止]

*[mmc:Mule 3.2]*您可以通过选中其复选框来停止或重新启动服务器，然后单击*Control*并从下拉列表中选择一个选项。

image:server-stop2.png[服务器停止2]

== 使用服务器组

服务器组只是服务器的逻辑分组。例如，如果在生产环境中有一些Mule实例，而在测试阶段有其他实例，则可以在管理控制台中对其进行相应的分组，这可能很有帮助。 *All*组列出所有注册的服务器。

*[mmc:Mule 3.2]*您也可以将一个或多个群集添加到群组。

=== 创建一个服务器组：

在服务器选项卡左侧的导航窗格中，点击*New Group*。然后，在对话框中输入该组的名称，然后单击确定。

image:newgroup.png[新闻组]

=== 将服务器添加到组中：

. 在“服务器”选项卡上，选中要添加到组的服务器的复选框。
*[mmc:Mule 3.2]*或者选择要添加到组的群集的复选框。
. 点击*Add to Group*，然后从下拉列表中选择该组。
. 在确认屏幕上，单击*Yes*将选定的服务器添加到组中。
*[mmc:Mule 3.2]*或者点击*Yes*将选定的群集添加到群组中。

=== 重命名组：

. 在导航树中选择组，然后点击*Rename*。
. 输入新名称，然后点击*OK*。

=== 从组中删除服务器：

. 选择您要从组中删除的服务器的复选框。
*[mmc:Mule 3.2]*或者选择您要从组中删除的群集的复选框。
. 点击*Remove from Group*，然后从下拉列表中选择该组。
. 在确认屏幕上，单击*Yes*从组中删除选定的服务器。
*[mmc:Mule 3.2]*或点击*Yes*从组中删除选定的群集。

如果您不再需要服务器组，则可以从系统中删除它。删除服务器组会*not*删除该组中的服务器，但只需删除该组。

*[mmc:Mule 3.2]*它也不会删除该组中的群集。

=== 删除服务器组：

. 在导航树中选择组，然后点击*Delete*。
. 点击*OK*确认您要删除该组。

== 查找服务器

有几种方法可以在管理控制台中找到服务器：

* 在Servers选项卡顶部的搜索框中输入服务器名称，然后从显示的列表中选择它。
* 如果您知道服务器位于哪个组，请单击左侧导航树中的组名称，然后浏览该组中的服务器列表。
* 如果服务器不是组的成员，请单击导航树中的*All*以查看所有服务器。

*[mmc:Mule 3.2]*您可以使用与查找服务器相同的方法找到群集。

== 取消注册服务器

如果您不再需要在控制台中管理服务器，则可以将其删除。

*To remove a server:*

. 选中您要取消注册的服务器的复选框。
. 点击*Unregister*。
. 在确认屏幕上，点击*Yes*取消注册所选服务器。您将无法再通过控制台管理该服务器。

注销服务器时，它不再出现在分配给它的组中或全部组中。

*[mmc:Mule 3.2]*要取消注册作为节点添加到群集的服务器，必须先解散群集。然后，服务器将返回到所有组，此时您可以取消注册。有关如何解散集群的信息，请参阅[Disbanding（"Deleting"）集群]。

如果控制台变得不可用，并且您想取消注册其服务器，以便您可以在另一台控制台上注册它们，则必须手动删除每台服务器下的`truststore.jks`文件以注销它。该文件位于您开始Mule的位置下的`.mule`目录下的mule agent目录中。当你删除这个文件时，服务器再次可用于在另一个控制台中注册。

link:/mule-management-console/v/3.2/setting-up-users[<<上一页：*设置用户*]

link:/mule-management-console/v/3.2/accessing-server-logs[Next：*访问服务器日志* >>]
